# timecapsule

./: .gitignore  Dockerfile  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js
src/: app.html  error.html  gunicorn_config.py  main.py
src/lib/deep/: FooterOne.svelte  FooterTwo.svelte  HeaderOne.svelte  HeaderTwo.svelte  NavOne.svelte  NavTwo.svelte  Seo.svelte
src/lib/insanity/: ScriptOne.svelte  ScriptTwo.svelte
src/lib/tc/: Footer.svelte  Header.svelte  Nav.svelte  SeoTc.svelte
src/routes/: +error.svelte  +layout.js  +page.svelte
src/routes/deep/: +page.svelte
src/timecapsule/: deep.py
templates/: base.html  error.html  tcbase.html  tcdbase1.html  tcdbase2.html
templates/timecapsule/: Bluebird.html  CarPayment.html  DoYouKnowMe.html  FirstApplet.html  apargument.html  apargumentscan.html  apenglish12.html  apps.html  apscholard.html  bowlingpic.html  calculus.html  diploma.html  ecsp.html  english10.html  enter.html  gpa.html  index.html  javaprojects.html  jgs.html  mathanalysis.html  momanddad.html  mtgp.html  mths.html  myindex.html  oops.html  physics.html  portfolio07.html  portfolio09.html  portfolio10.html  presidentgold.html  projects.html  uconndiploma.html  vapilot.html  vapilot2.html  vapilot3.html  writinggoals.html
templates/timecapsuledeep/: 3careerentry.html  3careerhome.html  cp.html  da.html  ddr.html  ddrlinks.html  ddrpics.html  ddrvideos.html  enter.html  insanity.html  nsa.html  otherhome.html  reviewsfaqs.html  schoolprojects.html  stepmania.html
(+91 files in other folders)
